--- a/.circleci/helmsman-prod-utilities.toml
+++ b/.circleci/helmsman-prod-utilities.toml
@@ -25,6 +25,8 @@ storageBackend = "secret" # default is configMap
  # protected = <true or false> -- default to false 
 [namespaces]
   [namespaces.neo4j]
+  [namespaces.prod]
+   installTiller= true
 
 
 # define any private/public helm charts repos you would like to get charts from
