--- a/.circleci/apps/neo4j-values.yaml
+++ b/.circleci/apps/neo4j-values.yaml
@@ -1,4 +1,4 @@
-# Default values for Neo4j.
+# PROD values for Neo4j.
 # This is a YAML-formatted file.
 # Declare name/value pairs to be passed into your templates.
 # name: value
@@ -7,7 +7,7 @@ name: "neo4j"
 
 # Specs for the Neo4j docker image
 image: "neo4j"
-imageTag: "3.3.4-enterprise"
+imageTag: "3.4.7-enterprise"
 imagePullPolicy: "IfNotPresent"
 # imagePullSecret: registry-secret
 acceptLicenseAgreement: "yes"
@@ -83,7 +83,7 @@ core:
 
 # Read Replicas
 readReplica:
-  numberOfServers: 2
+  numberOfServers: 0
   ## Pass extra environment variables to the Neo4j container.
   ##
   extraVars:
@@ -113,10 +113,10 @@ readReplica:
   #       curl -L https://github.com/neo4j-contrib/neo4j-apoc-procedures/releases/download/3.2.0.3/apoc-3.2.0.3-all.jar -O
   #       cp apoc-3.2.0.3-all.jar /plugins/
 
-resources: {}
-# limits:
-#   cpu: 100m
-#   memory: 512Mi
-# requests:
-#   cpu: 100m
-#   memory: 512Mi
+resources: 
+  limits:
+    cpu: 250m
+    memory: 1000Mi
+  requests:
+    cpu: 100m
+    memory: 512Mi
