--- a/.circleci/helmsman-prod-utilities.toml
+++ b/.circleci/helmsman-prod-utilities.toml
@@ -25,8 +25,6 @@ storageBackend = "secret" # default is configMap
  # protected = <true or false> -- default to false 
 [namespaces]
   [namespaces.neo4j]
-  [namespaces.prod]
-   installTiller= true
 
 
 # define any private/public helm charts repos you would like to get charts from
@@ -39,37 +37,58 @@ ostelco="https://storage.googleapis.com/pi-ostelco-helm-charts-repo/"
 [apps]
 
     [apps.cert-manager]
-    name = "cert-manager" # should be unique across all apps
+    name = "cert-manager" 
     description = "Cert manager for managing SSL certificates."
-    namespace = "kube-system" # maps to the namespace as defined in environmetns above
-    enabled = true # change to false if you want to delete this app release [empty = flase]
-    chart = "stable/cert-manager" # changing the chart name means delete and recreate this chart
+    namespace = "kube-system" 
+    enabled = true 
+    chart = "stable/cert-manager" 
     version = "0.3.4"
-    valuesFile = "apps/cert-manager-values.yaml" # leaving it empty uses the default chart values
+    valuesFile = "apps/cert-manager-values.yaml" 
     wait = true
     priority = -9
     protected = true
 
     [apps.cert-issuer]
-    name = "cert-issuer" # should be unique across all apps
     description = "Cluster Issuers for Cert manager."
-    namespace = "kube-system" # maps to the namespace as defined in environmetns above
-    enabled = true # change to false if you want to delete this app release [empty = flase]
-    chart = "ostelco/cert-issuer" # changing the chart name means delete and recreate this chart
+    namespace = "kube-system" 
+    enabled = true 
+    chart = "ostelco/cert-issuer" 
     version = "0.2.0"
-    valuesFile = "apps/cert-issuer-values.yaml" # leaving it empty uses the default chart values
+    valuesFile = "apps/cert-issuer-values.yaml" 
     priority = -8
-    protected = true
+    protected = false
 
     [apps.neo4j]
-    name = "neo4j"
-    description = "Neo4J deployment"
+    description = "Neo4J PROD deployment"
     namespace = "neo4j"
     enabled = true
     chart = "stable/neo4j"
-    version = "0.7.2"
+    version = "0.8.0"
     valuesFile = "apps/neo4j-values.yaml"
     priority = -7 
     wait = true
-    protected = true
+    protected = false
  
+    [apps.prometheus]
+    description = "Promethues PROD instance"
+    namespace = "kube-system" 
+    enabled = true
+    chart = "stable/prometheus"
+    version = "7.0.3"
+    valuesFile = "apps/prometheus-values.yaml"
+    priority = -6
+    wait = true
+    protected = true
+
+    [apps.grafana]
+    description = "Grafan PROD instance"
+    namespace = "kube-system" 
+    enabled = true
+    chart = "stable/grafana"
+    version = "1.14.6"
+    valuesFile = "apps/grafana-values.yaml"
+    priority = -5
+    wait = true
+    protected = true
+    [apps.grafana.set]
+    "adminPassword"="$GRAFANA_ADMIN_PASSWORD"
