--- a/.circleci/helmsman-prod-utilities.toml
+++ b/.circleci/helmsman-prod-utilities.toml
@@ -1,7 +1,7 @@
 # metadata -- add as many key/value pairs as you want
 [metadata]
 maintainer = "Sami Alajrami (sami@praqma.com)"
-description = "Desired state file for deploying Prime and its needed utilities."
+description = "Desired state file for deploying prod cluster utilities."
 
 # paths to the certificate for connecting to the cluster
 # you have to use exact key names here : 'caCrt' for certificate and 'caKey' for the key and caClient for the client certificate
@@ -32,63 +32,66 @@ storageBackend = "secret" # default is configMap
 # private repos hosted in s3,GCS buckets are supported
 [helmRepos]
 ostelco="https://storage.googleapis.com/pi-ostelco-helm-charts-repo/"
+datawire="https://www.getambassador.io"
 
 
 [apps]
 
     [apps.cert-manager]
-    name = "cert-manager" 
+    name = "cert-manager" # should be unique across all apps
     description = "Cert manager for managing SSL certificates."
-    namespace = "kube-system" 
-    enabled = true 
-    chart = "stable/cert-manager" 
-    version = "0.3.4"
-    valuesFile = "apps/cert-manager-values.yaml" 
+    namespace = "kube-system" # maps to the namespace as defined in environmetns above
+    enabled = true # change to false if you want to delete this app release [empty = flase]
+    chart = "stable/cert-manager" # changing the chart name means delete and recreate this chart
+    version = "0.5.2"
+    valuesFile = "apps/cert-manager-values.yaml" # leaving it empty uses the default chart values
     wait = true
     priority = -9
     protected = true
 
     [apps.cert-issuer]
+    name = "cert-issuer" # should be unique across all apps
     description = "Cluster Issuers for Cert manager."
-    namespace = "kube-system" 
-    enabled = true 
-    chart = "ostelco/cert-issuer" 
+    namespace = "kube-system" # maps to the namespace as defined in environmetns above
+    enabled = true # change to false if you want to delete this app release [empty = flase]
+    chart = "ostelco/cert-issuer" # changing the chart name means delete and recreate this chart
     version = "0.2.0"
-    valuesFile = "apps/cert-issuer-values.yaml" 
+    valuesFile = "apps/cert-issuer-values.yaml" # leaving it empty uses the default chart values
     priority = -8
-    protected = false
+    protected = true
 
     [apps.neo4j]
-    description = "Neo4J PROD deployment"
+    name = "neo4j"
+    description = "Neo4J deployment"
     namespace = "neo4j"
     enabled = true
     chart = "stable/neo4j"
-    version = "0.8.0"
+    version = "0.10.0"
     valuesFile = "apps/neo4j-values.yaml"
     priority = -7 
     wait = true
-    protected = false
- 
+    protected = true
+
+    [apps.ambassador]
+    description = "Ambassador API Gateway."
+    namespace = "kube-system" 
+    enabled = true 
+    chart = "stable/ambassador" 
+    version = "1.1.5"
+    valuesFile = "apps/ambassador-values.yaml" 
+    wait = true
+    priority = -6
+    protected = true
+     [apps.ambassador.set]
+      "service.loadBalancerIP" = "$AMBASSADOR_STATIC_IP"
+
     [apps.prometheus]
-    description = "Promethues PROD instance"
+    description = "Promethues dev instance"
     namespace = "kube-system" 
     enabled = true
     chart = "stable/prometheus"
-    version = "7.0.3"
+    version = "8.4.2"
     valuesFile = "apps/prometheus-values.yaml"
-    priority = -6
-    wait = true
-    protected = true
-
-    [apps.grafana]
-    description = "Grafan PROD instance"
-    namespace = "kube-system" 
-    enabled = true
-    chart = "stable/grafana"
-    version = "1.14.6"
-    valuesFile = "apps/grafana-values.yaml"
     priority = -5
     wait = true
-    protected = true
-    [apps.grafana.set]
-    "adminPassword"="$GRAFANA_ADMIN_PASSWORD"
+    protected = true  
