--- a/.circleci/apps/ambassador-values.yaml
+++ b/.circleci/apps/ambassador-values.yaml
@@ -2,8 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
-daemonSet: false
+# replicaCount: 2
+daemonSet: true
 
 ambassador:
   id: default
@@ -34,7 +34,7 @@ securityContext:
 
 image:
   repository: quay.io/datawire/ambassador
-  tag: 0.51.2
+  tag: 0.53.1
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -48,13 +48,13 @@ service:
   http:
     enabled: true
     port: 80
-    targetPort: 80
+    targetPort: 8080
     # nodePort: 30080
 
   https:
     enabled: true
     port: 443
-    targetPort: 443
+    targetPort: 8443
     # nodePort: 30443
 
   annotations:
@@ -77,7 +77,7 @@ service:
      name: ambassador
      config:
        use_remote_address: true
-       service_port: 443
+       service_port: 8443
   #       diagnostics:
   #         enabled: false
 
