--- a/.circleci/apps/cert-manager-values.yaml
+++ b/.circleci/apps/cert-manager-values.yaml
@@ -1,36 +1,52 @@
-# Default values for cert-manager.
+# Prod values for cert-manager.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+global:
+  ## Reference to one or more secrets to be used when pulling images
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  ##
+  imagePullSecrets: []
+  isOpenshift: false
+  # - name: "image-pull-secret"
+
+  # Optional priority class to be used for the cert-manager pods
+  priorityClassName: ""
+  rbac:
+    create: true
+
+  logLevel: 2
+
+  leaderElection:
+    # Override the namespace used to store the ConfigMap for leader election
+    namespace: ""
+
 replicaCount: 1
+
+strategy: 
+  type: RollingUpdate
+  rollingUpdate:
+    maxSurge: 3
+    maxUnavailable: 1
+
 
 image:
   repository: quay.io/jetstack/cert-manager-controller
-  tag: v0.5.2
+  # Override the image tag to deploy by setting this variable.
+  # If no value is set, the chart's appVersion will be used.
+  tag: v0.8.0
   pullPolicy: IfNotPresent
-
-createCustomResource: true
 
 # Override the namespace used to store DNS provider credentials etc. for ClusterIssuer
 # resources. By default, the same namespace as cert-manager is deployed within is
 # used. This namespace will not be automatically created by the Helm chart.
 clusterResourceNamespace: ""
 
-leaderElection:
-  # Override the namespace used to store the ConfigMap for leader election
-  namespace: ""
-
-certificateResourceShortNames: ["cert", "certs"]
-
-rbac:
-  # Specifies whether RBAC resources should be created
-  create: true
-
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "cert-manager"
+  name:
 
 # Optional additional arguments
 extraArgs: []
@@ -47,6 +63,13 @@ resources: {}
   #   cpu: 10m
   #   memory: 32Mi
 
+# Pod Security Context
+# ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+securityContext:
+  enabled: false
+  fsGroup: 1001
+  runAsUser: 1001
+
 podAnnotations: {}
 
 podLabels: {}
@@ -61,7 +84,8 @@ podLabels: {}
 #     - "1.1.1.1"
 #     - "8.8.8.8"
 
-nodeSelector: {}
+nodeSelector: 
+  target: utilities
 
 ingressShim: {}
   # defaultIssuerName: ""
@@ -72,10 +96,8 @@ ingressShim: {}
 webhook:
   enabled: false
 
-# This is used by the static manifest generator in order to create a static
-# namespace manifest for the namespace that cert-manager is being installed
-# within. It should **not** be used if you are using Helm for deployment.
-createNamespaceResource: false
+cainjector:
+  enabled: false
 
 # Use these variables to configure the HTTP_PROXY environment variables
 # http_proxy: "http://proxy:8080"
