--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,30 @@ jobs:
             - static_ip.txt
             - endpoint.txt 
             - keys/*     
+  create-cluster-prereqs:
+    docker:
+      - image: praqma/gcloud-kubectl-helm:v2.11.0
+        environment:
+          PROJECT: pi-ostelco-prod
+          CLUSTER: pi-prod
+          ZONE: europe-west1
+          SERVICE_ACCOUNT: terraform-manage-cluster-from@pi-ostelco-prod.iam.gserviceaccount.com
+    steps:
+      - checkout
+
+      - run:
+          name: create prod cluster prerequisites 
+          command: |
+            export GOOGLE_CREDENTIALS=${PI_PROD_GOOGLE_CREDENTIALS}
+            /authenticate.bash
+            # create SSD storage class
+            kubectl apply -f .circleci/storage_class.yaml
+            # cert-manager CRDs and namespace labels
+            CERT_MANAGER_VERSION=0.8
+            kubectl apply -f https://raw.githubusercontent.com/jetstack/cert-manager/release-${CERT_MANAGER_VERSION}/deploy/manifests/00-crds.yaml
+            CERT_MANAGER_NAMESPACE=kube-system
+            kubectl label namespace ${CERT_MANAGER_NAMESPACE} certmanager.k8s.io/disable-validation="true" --overwrite
+
 
   deploy-prod-utilities: 
     docker:
@@ -85,7 +109,11 @@ workflows:
     - terraform-prod-apply:
         requires:
         - hold-before-updating-prod-cluster 
-        
+
+    - create-cluster-prereqs:
+        requires:
+        - terraform-prod-apply   
+
     - deploy-prod-utilities:
         requires:
           - terraform-prod-apply       
