--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
             - static_ip.txt
             - endpoint.txt 
             - keys/*     
+  
   create-cluster-prereqs:
     docker:
       - image: praqma/gcloud-kubectl-helm:v2.11.0
@@ -61,7 +62,7 @@ jobs:
           name: create prod cluster prerequisites 
           command: |
             export GOOGLE_CREDENTIALS=${PI_PROD_GOOGLE_CREDENTIALS}
-            /authenticate.bash
+            ./authenticate.bash
             # create SSD storage class
             kubectl apply -f .circleci/storage_class.yaml
             # cert-manager CRDs and namespace labels
@@ -116,4 +117,4 @@ workflows:
 
     - deploy-prod-utilities:
         requires:
-          - terraform-prod-apply       
+          - create-cluster-prereqs      
