--- a/.circleci/helmsman-prod-utilities.toml
+++ b/.circleci/helmsman-prod-utilities.toml
@@ -24,7 +24,7 @@ storageBackend = "secret" # default is configMap
  # protected = <true or false> -- default to false 
 [namespaces]
   [namespaces.neo4j]
-
+  [namespaces.prod]
 
 # define any private/public helm charts repos you would like to get charts from
 # syntax: repo_name = "repo_url"
